--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "next": "13.4.18",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-spring": "^9.7.2",
+    "react-visibility-sensor": "^5.1.1",
+    "swiper": "^10.2.0"
   }
 }
